--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       background: #ffffff;
       color: #0b0b0c;
       line-height: 1.6;
-      background-image: radial-gradient(circle at 20% 20%, #f2f2f2 0%, #ffffff 40%), 
-                        radial-gradient(circle at 80% 80%, #f9f9f9 0%, #ffffff 40%);
+      background-image: radial-gradient(circle at 20% 20%, #e6e6e6 0%, #ffffff 40%), 
+                        radial-gradient(circle at 80% 80%, #ececec 0%, #ffffff 40%);
       background-attachment: fixed;
     }
     h1, h2, h3 {
